@@ -14,6 +14,7 @@ HEAD
 - fixed big-endian issue for DATA_B3 messages in internal libcapi code.
 - fixed NULL-pointer when no digits are signaled in DID mode.
 - adapt to new Asterisk 1.6.1 changes.
+- added capicommand to set CAPI application id into an Asterisk dialplan variable.
 
 
 chan_capi-1.1.1
